FIX scrollbar always visible

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -29,7 +29,7 @@ html {
     height: 70vh;
     width: 80vw;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-radius: 25px;
     border-width: 3px;
     border-style: solid;
